--- a/stories/Setting/1-intro.stories.mdx
+++ b/stories/Setting/1-intro.stories.mdx
@@ -1,3 +1,7 @@
+import { Meta } from '@storybook/addon-docs/blocks';
+
+<Meta title='Setting/Intro' />
+
 # The World of Aiti
 
 Welcome to the world of Aiti. Aiti is both a living planet, and the name of the setting, so all of the associated places in the multiverse as well.
