--- a/stories/Setting/3-world-state.stories.mdx
+++ b/stories/Setting/3-world-state.stories.mdx
@@ -1,3 +1,7 @@
+import { Meta } from '@storybook/addon-docs/blocks';
+
+<Meta title='Setting/World State' />
+
 # Before Your Campaign Begins
 
 It has been generations upon generations since The War. The Land has been forgotten, countless cycles of The Life have taken place, and there have been many Great Mages. One of the Great Mages created the Portal of Portals, a device which allowed anyone, anywhere on Aiti, to teleport anywhere with the ease of snapping their finger. Life was not paradise, but it was good. 
