--- a/stories/Setting/5-gods.stories.mdx
+++ b/stories/Setting/5-gods.stories.mdx
@@ -1,3 +1,7 @@
+import { Meta } from '@storybook/addon-docs/blocks';
+
+<Meta title='Setting/Gods and Divines' />
+
 # God and Divines
 
 There are only three beings in the world of Aiti that could be truly considered divine:
