--- a/stories/Setting/6-notable-people.stories.mdx
+++ b/stories/Setting/6-notable-people.stories.mdx
@@ -1,3 +1,7 @@
+import { Meta } from '@storybook/addon-docs/blocks';
+
+<Meta title='Setting/Notable People' />
+
 # Major Players, Movers, and Shakers
 
 ## Land of the Water
