--- a/stories/Setting/7-chaos-gates.stories.mdx
+++ b/stories/Setting/7-chaos-gates.stories.mdx
@@ -1,3 +1,7 @@
+import { Meta } from '@storybook/addon-docs/blocks';
+
+<Meta title='Setting/Chaos Gates' />
+
 # Chaos Gates
 
 One of The Life's functions was to help Aiti ground herself in the reality she had created. After The Life's death, Aiti's ability to maintain all of her reality began to slip, creating small breaks or tears where Piileva can spill through. The people took to calling these Chaos Gates. 
