--- a/stories/Setting/8-factions.stories.mdx
+++ b/stories/Setting/8-factions.stories.mdx
@@ -1,3 +1,7 @@
+import { Meta } from '@storybook/addon-docs/blocks';
+
+<Meta title='Setting/Factions' />
+
 # Factions
 
 Though Aiti was once a peaceful world, there have always been disagreements, and people have always gravitated toward those with similar ideas. In the ten years since the death of The Life, these factions have grown stronger, and now have a larger presence in the world.
