--- a/stories/Tables/1-chaos-gates.stories.mdx
+++ b/stories/Tables/1-chaos-gates.stories.mdx
@@ -1,3 +1,8 @@
+import { Meta } from '@storybook/addon-docs/blocks';
+import { Table } from 'reactstrap';
+
+<Meta title='Tables/Chaos Gates' />
+
 # Chaos Gates
 
 ## Rules
@@ -6,15 +11,51 @@ When approaching the Chaos Gate, roll 1d20 on Table A and follow the instruction
 
 ### Chaos Control
 
-The Chaos Gate, through an incredible stroke of good fortune, will respond to your Command. It appears completely calm and placid, though you still know it is there or can sense its presence. Choose from one of the following options:
+The Chaos Gate, through an incredible stroke of good fortune, will respond to your Command. It appears completely calm and placid, though you still know 
+it is there or can sense its presence. Choose from one of the following options:
 
-| Option | Effect |
-| -      | -      |
-| Request information        | The Gate will answer a single question truthfully, though since gates cannot speak, it will manifest some way of answering. This is guaranteed to be Completely True and Accurate, though the manner of answer will be up to your DM. |
-| Request a non-magic item | At your DM's discretion, you may request an item of your choice. The Gate will then manifest it. |
-| Request a magic item       | Somehow, from somewhere, the Chaos Gate attempts to manifest a magical item of your choosing. At your DM's discretion, roll on Table C. | 
-| Request a favour           | Favours, such as "please send me to Skymeet" or "make it so that I have recently taken a long rest" should be considered carefully, as Piileva may deliver. Roll on Table C (at your DM's discretion) for the outcome. |
-| Hyper-sonic                | If you think I could make it this far without making this reference, you are **sorely** mistaken. Double your movement speed until your next long rest. Whether or not you turn gold is up to you. | 
+<table>
+  <thead>
+    <tr>
+      <th>Option</th>
+      <th>Effect</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Request information</td>
+      <td>
+        The Gate will answer a single question truthfully, though since gates cannot speak, it will manifest some way of answering. This is guaranteed to be 
+        Completely True and Accurate, though the manner of answer will be up to your DM.
+      </td>
+    </tr>
+    <tr>
+      <td>Request a non-magic item</td>
+      <td>
+        At your DM's discretion, you may request an item of your choice. The Gate will then manifest it. 
+      </td>
+    </tr>
+    <tr>
+      <td>Request a magic item</td>
+      <td>
+        Somehow, from somewhere, the Chaos Gate attempts to manifest a magical item of your choosing. At your DM's discretion, roll on Table C. 
+      </td>
+    </tr>
+    <tr>
+      <td>Request a favour</td>
+      <td>
+        Favours, such as "please send me to Skymeet" or "make it so that I have recently taken a long rest" should be considered carefully, as Piileva 
+        may deliver. Roll on Table C (at your DM's discretion) for the outcome. 
+      </td>
+    </tr>
+    <tr>
+      <td>Hyper-sonic</td>
+      <td>
+        If you think I could make it this far without making this reference, you are <b>sorely</b> mistaken. Double your movement speed until your next long rest. Whether or not you turn gold is up to you.
+      </td>
+    </tr>
+  </tbody>
+</table>
 
 ### Chaos Consume
 
