--- a/stories/Setting/2-history.stories.mdx
+++ b/stories/Setting/2-history.stories.mdx
@@ -1,3 +1,7 @@
+import { Meta } from '@storybook/addon-docs/blocks';
+
+<Meta title='Setting/History' />
+
 # History
 
 The future is always informed by the past, and the best way to understand what's happening now is to understand what has already happened. 
