--- a/stories/Spells/lie-of-love.stories.mdx
+++ b/stories/Spells/lie-of-love.stories.mdx
@@ -1,3 +1,7 @@
+import { Meta } from '@storybook/addon-docs/blocks';
+
+<Meta title="Spells/Valehdella\'s Lie of Love" />
+
 # Valehdella's Lie of Love
 
 5th Level Enchantment 
