typescript and light theme and whatever

--- a/stories/Setting/1-intro.stories.mdx
+++ b/stories/Setting/1-intro.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title='Setting/Intro' />
+<Meta title='Intro' />
 
 # The World of Aiti
 
