--- a/stories/Setting/2-history.stories.mdx
+++ b/stories/Setting/2-history.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title='Setting/History' />
+<Meta title='Setting|History' />
 
 # History
 
