--- a/stories/Setting/3-world-state.stories.mdx
+++ b/stories/Setting/3-world-state.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title='Setting/World State' />
+<Meta title='Setting|World State' />
 
 # Before Your Campaign Begins
 
