--- a/stories/Spells/Intro.stories.mdx
+++ b/stories/Spells/Intro.stories.mdx
@@ -1,3 +1,7 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title='Spells/Intro' />
+<Meta title='Spells|Intro' />
+
+# Spells
+
+Aiti is a world full of magic and mystery, so there's some fun extra spells to try out.
