factions, re-arranging

--- a/stories/Setting/8-factions.stories.mdx
+++ b/stories/Setting/8-factions.stories.mdx
@@ -1,10 +1,12 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title='Setting/Factions' />
+<Meta title='Setting|Factions' />
 
 # Factions
 
-Though Aiti was once a peaceful world, there have always been disagreements, and people have always gravitated toward those with similar ideas. In the ten years since the death of The Life, these factions have grown stronger, and now have a larger presence in the world.
+Though Aiti was once a peaceful world, there have always been disagreements, and people 
+have always gravitated toward those with similar ideas. In the ten years since the death 
+of The Life, these factions have grown stronger, and now have a larger presence in the world.
 
 ## Children of The Life
 
@@ -12,14 +14,66 @@ Though Aiti was once a peaceful world, there have always been disagreements, and
 | ------------ | --------- | ------- |
 | Chaotic Good | Canopy    | Unknown |
 
-Through the cycle of rebirth, The Life would choose a person to transfer their power to every so often. Potential candidates were offered the chance to become a Child of The Life. They would be blessed with a small amount of The Life's power, and would usually join the other candidates in Canopy. They served as The Life's eyes and ears in the world, venturing out to perform acts of good that didn't require The Life's personal attention. Though their order operates in the open, they're still considered mysterious and strange, as the members always seem distant, as if distracted by some unseen entity.
+Through the cycle of rebirth, The Life would choose a person to transfer their power 
+to every so often. Potential candidates were offered the chance to become a Child 
+of The Life. They would be blessed with a small amount of The Life's power, and would 
+usually join the other candidates in Canopy. They served as The Life's eyes and ears 
+in the world, venturing out to perform acts of good that didn't require The Life's 
+personal attention. Though their order operates in the open, they're still 
+considered mysterious and strange, as the members always seem distant, as if 
+distracted by some unseen entity.
 
-Before the death of The Life, being offered a chance to join the Children was considered an honour, but their place in the world has come heavily into question as of late. Without their patron, they continue to work as they did before, but they have become more distant, and less approachable. They still handle the same sort of issues as they always have, but many wonder who is giving them their orders. They appear out of nowhere, as they are still blessed with The Life's power, solve the perceived problem, and leave just as quickly as they arrived. 
+Before the death of The Life, being offered a chance to join the Children was considered 
+an honour, but their place in the world has come heavily into question as of late. 
+Without their patron, they continue to work as they did before, but they have become 
+more distant, and less approachable. They still handle the same sort of issues as they 
+always have, but many wonder who is giving them their orders. They appear out of nowhere, 
+as they are still blessed with The Life's power, solve the perceived problem, and leave 
+just as quickly as they arrived. 
 
-Many claim that members of the Children are becoming increasingly erratic over time. The Children claim that they still have a leader and still know their way, but it is difficult to be certain, since no new members can join and much of the internal communication is telepathic. 
+Many claim that members of the Children are becoming increasingly erratic over time. 
+The Children claim that they still have a leader and still know their way, but it is 
+difficult to be certain, since no new members can join and much of the internal communication 
+is telepathic. 
 
 ## Moonrise
 
-| Alignment       | Home Base        | Leader  |
-| --------------- | ---------------- | ------- |
-| Chaotic Neutral | Mother Forest    | Unknown |
+| Alignment       | Home Base        | Leader                     |
+| --------------- | ---------------- | -------------------------- |
+| Lawful Evil     | Mother Forest    | Brandal, Druid of the Moon |
+
+A group of like-minded druids who have decided, collectively, that technology is a source of 
+evil on Aiti. Over the course of the past ten years, they have worked their way into positions 
+where they are well-connected and able to advise those in power. They are inherently distrusting
+of non-members, and are extremely secretive about their activities, as their (un)stated goal is
+to steer the course of the world in any way they can, so long as it's away from more technology 
+being developed. They believe firmly in the power of nature and Aiti, and think technology is a sin
+against her.
+
+Their leader, Brandal, is a charismatic Air Genasi who brought most of the original group together.
+They're known for their mastery of bird-like shapes, which they put to great use in the flurry of
+activity that eventually led to the creation of Moonrise. Brandal does not often leave the Mother 
+Forest, but they can usually be found in Canopy, advising the local government.
+
+## Hamish and co.
+
+| Alignment       | Home Base        | Leader                     |
+| --------------- | ---------------- | -------------------------- |
+| Chaotic Neutral | Delta            | Hamish Labarthance, Jr.    |
+
+Hamish Labarthance invented the glider carriage, and his invention arguably made travel possible
+for the masses again. Hamish and co. is a bastardization of this man and his gift to the world. 
+Hamish Jr. used the money his father left to him after his father's death to fund research into 
+lost teleportation, gate, and portal magics. He created a small company that ruthlessly controls
+as much use of the city portals they helped to develop as they possibly can in a relentless pursuit 
+of profit. 
+
+The wizards who run the city portals are actually employees (read: basically slaves) of Hamish and co.,
+who are worked nearly to death. There have been a few attempts at reform, but none of them have taken,
+since Labarthance is extremely well connected and offensively rich. Labarthance has famously stated
+that he cares little for the well-being of his employees, preferring to call them "resources," and would
+gladly replace them with enchanted items if he could.
+
+Hamish and co. has since branched out from city portals into luxury gliders. Extremely expensive luxury 
+gliders. There was a short-lived attempt to corner the market on personal gliders, but they proved to be
+too easy to make, and there was no profit to be had.
