--- a/stories/Tables/1-chaos-gates.stories.mdx
+++ b/stories/Tables/1-chaos-gates.stories.mdx
@@ -1,12 +1,8 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title='Tables/Chaos Gates' />
+<Meta title='Tables|Chaos Gates' />
 
 # Chaos Gates
-
-## Rules
-
-When approaching the Chaos Gate, roll 1d20 on Table A and follow the instructions. This roll should be **secret**, known only to **you and your DM**.
 
 ### Chaos Control
 
