--- a/stories/Spells/Intro.stories.mdx
+++ b/stories/Spells/Intro.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title='Spells|Intro' />
+<Meta title='Spells|Magic of Aiti' />
 
 # Spells
 
