--- a/stories/Spells/lie-of-love.stories.mdx
+++ b/stories/Spells/lie-of-love.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story } from "@storybook/addon-docs/blocks";
 import { SpellBlock } from "../../src/SpellBlock";
 
-<Meta title="Spells|Bard" />
+<Meta title="Spells|5th Level" />
 
 <Story name="Valehdella\'s Lie of Love">
   <SpellBlock
@@ -18,13 +18,14 @@ import { SpellBlock } from "../../src/SpellBlock";
     duration="Up to 1 hour"
     range="60 feet"
   >
-    A creature of your choice that you share a lane within range that shares a
-    language with you. They must succeed on a Charisma saving throw or fall
+    A creature of your choice within range that shares a language with you. 
+    They must succeed on a Charisma saving throw or fall
     helplessly in love with you for the duration of the spell. The creature
-    becomes your ally, and will obey commands you give them so long as you say
+    becomes your ally, and will obey commands you give them, so long as you say
     them as a lover would. They will fiercely protect you should you come under
     attack by anyone. They will also become jealous if you do not speak to them
-    at least once every ten minutes. The spell ends after the duration is over,
+    at least once every ten minutes. If they become jealous, they can attempt
+    the Charisma saving throw again. The spell ends after the duration is over,
     or if you damage the creature. Once the spell is over, the creature becomes
     hostile, and knows that it has been enchanted.
   </SpellBlock>
