added some more stuff

--- a/stories/Intro/2-before-you-begin.stories.mdx
+++ b/stories/Intro/2-before-you-begin.stories.mdx
@@ -28,6 +28,13 @@ Unrealized out. Portals have begun appearing at random, few and far between,
 thankfully, but Unrealized have been wandering in, and suddenly finding themselves 
 with mostly random forms.
 
+In the intervening years, people have learned to compensate for the lack of deity and
+easy transport, though the peace that the world once enjoyed has been slowly fraying.
+Lack of cheap, instant communication has increased tensions across the world, and the
+fact that there is no longer a mediator decidedly higher in authority than the rulers
+of the individual Lands has brought the ability to properly negotiate into question.
+There seems to be little chance of outright war, but tensions have been slowly rising.
+
 ## Learning
 
 When the Portal of Portals was created, the knowledge of teleportation magic was 
@@ -42,7 +49,7 @@ the ability to cast any other spells, but can cast gate spells at will.
 
 There are a few ways to travel around the world of Aiti. The simplest, cheapest, and 
 most common is a horse-drawn cart, but there are other, more exotic means of travel.
-Here are some of them, presented in order of most to least expensive.
+Here are some of them, presented in no particular order.
 
 ### City portals
 
@@ -51,10 +58,26 @@ to be found between the major cities. They are usually very expensive for the ge
 public, or may require the approval of a high-level administrator. On particularly busy
 days, the Queen herself approves travel through the gates of Skymeet.
 
-### Private glider
-
 ### Glider carriage
 
-- horse-drawn carts
-- beginning of car technology
-- trainsssssss
+Soon after the destruction of the portal of portals, Hamish Labarthance of Delta began adapting
+the work of the sailors of the Land of the Water to a more land-friendly approach. 
+Traditionally, each ship had been crewed by not only sailors, but some sort of magic
+user skilled in wind magics, so they were not wholly reliant on the weather. Labarthance built
+special rails and created a spell which allowed a carriage to float above them, creating
+a train-like carriage that could be powered by a mage, similarly to how wind mages would
+power the ships of the Land of the Water. 
+
+Soon after he debuted his invention, rail lines were built between the major cities, and glider
+carriages were running between them with some regularity. Trade and travel resumed, but
+Labarthance did not live to see his invention be truly realised. 
+
+### Private glider
+
+Once the glider carriages were being built, one of the wizards working with Labarthance began
+to adapt the spell that made the rails possible for use with other objects. It took a few years,
+but eventually he created a platform similar to a small boat, with a levitation spell beneath it, 
+that could be powered by a single mage, instead of the two to three required for a whole carriage.
+The spell to levitate the personal gliders ended up being fairly simple, though the gliders themselves
+remain mostly unavailable to the masses, due to the relative difficulty of piloting them, and
+the price of training.
