--- a/stories/Setting/6-notable-people.stories.mdx
+++ b/stories/Setting/6-notable-people.stories.mdx
@@ -10,15 +10,28 @@ import { Meta } from '@storybook/addon-docs/blocks';
 
 Pronounced "sheena"
 
-Currently queen of the Land of the Water, Sine suffers from fairly severe depression. Her husband died several years ago, and she hasn't been quite the same since. Her two children and her entire court beg her fairly often to relinquish the throne and seek help, but she is convinced that ruling is all she has. She pours all of her effort and energy into maintaining her kingdom, often getting involved in matters far below the necessity of requiring the involvement of the queen, but she needs to stay busy.
+Currently queen of the Land of the Water, Sine suffers from fairly severe depression. Her husband died 
+several years ago, and she hasn't been quite the same since. Her two children and her entire court beg 
+her fairly often to relinquish the throne and seek help, but she is convinced that ruling is all she has. 
+She pours all of her effort and energy into maintaining her kingdom, often getting involved in matters 
+far below the necessity of requiring the involvement of the queen, but she needs to stay busy.
 
-When not meddling in the affairs of the common folk and her court, Sine can occasionally be found training with her sailors, and is actually an accomplished ship captain. Some say she is a reasonably powerful storm sorcerer, but she will not confirm or deny this.
+When not meddling in the affairs of the common folk and her court, Sine can occasionally be found 
+training with her sailors, and is actually an accomplished ship captain. Some say she is a reasonably 
+powerful storm sorcerer, but she will not confirm or deny this.
 
 ## Land of the Sky
 
-### King Terrence
-
 ### Queen Miranda
+
+Often called "The Highest," or simply "Highest," Queen Miranda of Skymeet is a impressively powerful Wizard.
+She studied at The Silver Tower in Sun's Reach before returning to Skymeet to participate in court affairs.
+When the previous King, Terrence, announced his retirement, she put her name forward as a candidate for the
+position. By that point, she had made a name for herself as a skilled diplomat, mediator, and philanthropist. 
+She fought hard to make sure the outlying cities of the Land of the Sky were kept front and center in the hearts
+and minds of the Skymeet court, and spent a fair amount of her family fortune on improvements to the
+infrastructure of her home village and the surrounding area. Once elected, she began to reform the court to 
+increase the representation of the entire Land, not just those who happened to get noticed.
 
 ## Land of the Sun
 
