--- a/stories/Setting/8-factions.stories.mdx
+++ b/stories/Setting/8-factions.stories.mdx
@@ -77,3 +77,29 @@ gladly replace them with enchanted items if he could.
 Hamish and co. has since branched out from city portals into luxury gliders. Extremely expensive luxury 
 gliders. There was a short-lived attempt to corner the market on personal gliders, but they proved to be
 too easy to make, and there was no profit to be had.
+
+## The Silver Tower
+
+| Alignment       | Home Base        | Leader                     |
+| --------------- | ---------------- | -------------------------- |
+| True Neutral    | Sun's Reach      | The Headmaster             |
+
+The Silver Tower is Aiti's premier school of magic. While everyone will get some amount of training
+as they grow up, those who wish to pursue magic itself as a course of study will inevitably choose one of
+the great magic schools, and likely try to choose The Silver Tower. 
+
+The Silver Tower does not boast a high number of Mages, as those are chosen by Aiti herself through 
+criteria none can claim to understand, but they can claim to have invented an extremely high number of 
+spells, and an extremely high number of alumni in well-connected places. They are relentless in their
+pursuit of knowledge, though they do try to make sure that their work doesn't hurt anyone. 
+
+They have a satellite campus in each of the major cities, but the main tower is in Sun's Reach, where 
+their strangest experiments take place. It is rumoured that they are working to harness the power of the
+Chaos Gates, though this remains only a rumour. Due to the esoteric nature of their work, there are
+many other rumours floating around about them, such as "they were responsible for the death of The Life,"
+or "they know how to rebuild the Portal of Portals." These are hotly denied by all staff and students.
+
+Though not an evil organization, they have been known to choose knowledge over morals, and were one of the
+primary researchers involved in Hamish and co.'s city portals. Once Hamish and co. proved to be 
+less than scrupulous, however, they forbade their students or alumni from working for the company going
+forward.
