--- a/stories/Tweaks/1-Intro.stories.mdx
+++ b/stories/Tweaks/1-Intro.stories.mdx
@@ -9,8 +9,6 @@ you can choose to play with.
 
 ## Spell slots
 
-For every class except warlocks, instead of regaining spell slots after a long rest, 
-regain all of them after every fight.
-
-For warlocks, your rules are the same, but increase your number of available spell slots
-by your proficiency bonus.
+For every class except Warlock, increase your number of 1st, 2nd, and 3rd level spell 
+slots by your proficiency bonus. Warlocks can increase their number of spell slots by 
+their proficiency bonus no matter the level.
