--- a/stories/Setting/Cities/5-skymeet.stories.mdx
+++ b/stories/Setting/Cities/5-skymeet.stories.mdx
@@ -12,10 +12,16 @@ school dedicated to the study of magic on Aiti.
 The areas around Skymeet are mostly filled with farms, though there is a fair amount of mining. The Land ends quite abruptly at the edge of the Mother 
 Forest, as the people have a great deal of respect for the lands within.
 
-Skymeet, and the Land of the Sky, are governed by King Terrence and Queen Miranda, with a court comprised mostly of citizens of note. There isn't a 
-noble class to speak of, and most people are invited to the Court for reasons of merit, rather than some sort of luck of being born. In the past, there 
-hasn't been much in the way of politics for the sake of politics, but there has been a growing trend of those vying for positions in the Court by 
-performing deeds mostly for show, rather than any sort of altruism.
-
 The city of Skymeet itself has a strong affinity for the domain of Knowledge, but the surrounding areas tend to favour Life. Citizens of the city tend 
 to pray to Haneul, the Great Mage who raised the upper tier of the city when it was getting overcrowded.
+
+Skymeet, and the Land of the Sky, are governed by Queen Miranda, with a court comprised of citizens of note. There isn't a noble class to speak of, 
+and most people are invited to the Court for reasons of merit, rather than some sort of luck of being born. Queen Miranda began to choose her court
+to represent the peoples of her Land, rather than solely by means of merit. Some disagreed with her decision, but many agreed with the idea of increasing
+the representation of the people, especially those in outlying areas. In the past, there hasn't been much in the way of politics for the sake of 
+politics, but there has been a growing trend of those vying for positions in the Court by performing deeds mostly for show, rather than any sort of altruism.
+
+The position of King (or Queen) is a lifetime appointment by the court, since they serve mainly as a mediator or chief executive. When the previous
+king or queen announces their retirement (or dies), the court begins a series of elections to choose the next. The process can take some time, as 
+part of the reason for the system is to make sure as many people as possible are satisfied by the outcome. Courtiers are expected to be able to justify
+their choice with some reason and logic.
