details details details

--- a/stories/Setting/Cities/1-cities-intro.stories.mdx
+++ b/stories/Setting/Cities/1-cities-intro.stories.mdx
@@ -7,3 +7,13 @@ import { Meta, Story } from '@storybook/addon-docs/blocks';
 The main continent of Aiti, called Sydän, is easily the largest. It is home to Canopy, the place where The Life called home. The continent is 
 dominated by four great Lands, roughly akin to city-states or kingdoms. Until recently, they lived in harmony, but tensions have been rising since the 
 loss of their divine mediator.
+
+Each Land is a large, sprawling thing. The capital cities are the largest, and some people will use the name of the city interchangeably with 
+the name of the Land. This does not mean that the populations are found entirely in the cities. There are many smaller, outlying cities, towns,
+and villages, as well as remote farms or mines. 
+
+Travel within a Land differs. The Land of the Water, being dominated by swamps and marshlands, tends to favour special boats or gliders that 
+allow easy travel over water. The Land of the Sun has a fairly extensive network of smaller glider carriage lines. The Land of the Sky is especially 
+keen on personal gliders, though there is still a great deal of more mundane travel by horse or horse-drawn carriage, since gliders cannot handle the 
+hills and mountains of the region quite as well as legs. The Land of the Forest is difficult to traverse, and so there are many ad-hoc solutions
+strung together, mostly involving animals of some sort.
