--- a/stories/Setting/Cities/2-delta.stories.mdx
+++ b/stories/Setting/Cities/2-delta.stories.mdx
@@ -24,3 +24,7 @@ The area surrounding delta is mainly farmland, occasionally dotted with a villag
 fairly comprehensive system of roads for those less aquatically inclined.
 
 Officially, the city's patron mage is Seònaid, but many also choose to pray to Nithara due to Nithara's more predictable nature.
+
+## Names
+
+Names in the Land of the Water typically draw on Gaelic or Celtic, especially Scots-Gaelic. 
