--- a/stories/Setting/Cities/3-canopy.stories.mdx
+++ b/stories/Setting/Cities/3-canopy.stories.mdx
@@ -22,3 +22,10 @@ close together and weaving a roof out of dead leaves, then sealing it with magic
 lack of need, but also due to the druidic aversion to it.
 
 The main patron of Canopy is the unnamed Great Mage who created Canopy, but many will pray to the patron of their particular Circle, or to The Life.
+
+## Names
+
+Names in the Land of the Forest are hard to pin down. Many of the denizens are not originally born there, and many of them are members of orders or
+groups that encourage names according to their traditions. 
+
+For character names, it is recommended that you follow the rules in Volo's Guide to Monsters for the Tabaxi, or choose Finnish names.
