--- a/stories/Setting/Cities/5-skymeet.stories.mdx
+++ b/stories/Setting/Cities/5-skymeet.stories.mdx
@@ -25,3 +25,7 @@ The position of King (or Queen) is a lifetime appointment by the court, since th
 king or queen announces their retirement (or dies), the court begins a series of elections to choose the next. The process can take some time, as 
 part of the reason for the system is to make sure as many people as possible are satisfied by the outcome. Courtiers are expected to be able to justify
 their choice with some reason and logic.
+
+## Names
+
+Names in the Land of the Sky typically draw on east asian languages, especially Korean. 
