--- a/stories/Setting/Cities/4-suns-reach.stories.mdx
+++ b/stories/Setting/Cities/4-suns-reach.stories.mdx
@@ -10,3 +10,7 @@ import { Meta } from '@storybook/addon-docs/blocks';
 - Inhabitants have an affinity with the Light Domain, very proud and strong-willed people
 - Architecture within Land of the Sun mimics buildings and structures within interconnected cities and metropolitan areas. Travel between the smaller cities are facilitated by use of magics to turn people into flashes of light and transporting themselves from one area to another; at night, travelers can be seen mimicking shooting stars of streaking meteors in the sky
 - Bantu languages
+
+## Names
+
+Names in the Land of the Sun typically draw on the Bantu family of languages, such as Swahili or Xhosa. 
