moon blade and bow

--- a/stories/Setting/Cities/4-suns-reach.stories.mdx
+++ b/stories/Setting/Cities/4-suns-reach.stories.mdx
@@ -4,12 +4,32 @@ import { Meta } from '@storybook/addon-docs/blocks';
 
 ## Sun's Reach, Land of the Sun
 
-- In the south
-- Africa
-- Physical area maintains large grasslands, similar to the serengeti, and the sky maintains rich reds and oranges that mimic the images of the inhabitants
-- Inhabitants have an affinity with the Light Domain, very proud and strong-willed people
-- Architecture within Land of the Sun mimics buildings and structures within interconnected cities and metropolitan areas. Travel between the smaller cities are facilitated by use of magics to turn people into flashes of light and transporting themselves from one area to another; at night, travelers can be seen mimicking shooting stars of streaking meteors in the sky
-- Bantu languages
+The southern region of Sydän is the Land of the Sun. It is a huge grassland, marked with pockets of trees and the
+occasional area that might be called a small forest, but it is mainly low, rolling hills and an endless sea of grass.
+The Land of the Sun can claim the largest number of smaller cities, towns, and villages compared to the other Lands, 
+but they're considerably denser closer to Sun's Reach, the capital. 
+
+Compared to the other Lands, the Land of the Sun also has the best inter-city transport network. The Land
+of the Sun was one of the most eager adopters of the glider carriage technology, and there are several rail 
+lines between some of the larger cities, but most of the transport uses what has been called "shooting stars." 
+Using a special magical circle, a person is wrapped in light and carried to a corresponding circle. The spells and 
+enchantments required for this are closely guarded by the Silver Tower, though they are more than willing to set
+up the necessary circles for anyone who asks (and pays). They have a name for the setup, but it is never actually used,
+since the night sky flashes like shooting stars as people move between areas. 
+
+Sun's Reach itself sits near the southern border of the Land, on a river fairly close to the ocean, though not
+as close as Delta. The city is built mostly in the shape of a sunburst, with glider carriage rails leaving
+the central circle at regular intervals. The buildings tend to be fairly low. For a very long time, the city planning
+philosophy has been "out, not up."
+
+To the northeast of the city is the Silver Tower. It is very purposefully too far to walk, but easily reached by 
+glider or, in the past, teleporting. Unlike the rest of the buildings in the Land of the Sun, the Silver Tower is 
+extremely tall, and grows a little more each year as new facilities are added. 
+
+Sun's Reach is considered to be a bit aloof and distant by the other Lands, especially since the loss of the Portal of
+Portals. Due to their distance from the other cities, and their prime location, there have always been border disputes,
+especially with the Land of the Water. Almost all of the grassland is arable, which is something that the Land of the
+Water sorely lacks.
 
 ## Names
 
