--- a/stories/Setting/8-factions.stories.mdx
+++ b/stories/Setting/8-factions.stories.mdx
@@ -1,4 +1,5 @@
 import { Meta } from '@storybook/addon-docs/blocks';
+import children from '../../assets/children-of-the-life.svg';
 
 <Meta title='Setting|Factions' />
 
@@ -9,6 +10,8 @@ have always gravitated toward those with similar ideas. In the ten years since t
 of The Life, these factions have grown stronger, and now have a larger presence in the world.
 
 ## Children of The Life
+
+<img src={children} />
 
 | Alignment    | Home Base | Leader  |
 | ------------ | --------- | ------- |
