--- a/stories/Setting/Cities/1-cities-intro.stories.mdx
+++ b/stories/Setting/Cities/1-cities-intro.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Story } from '@storybook/addon-docs/blocks';
 
 <Meta title='Setting|Cities/Cities of Aiti' />
 
-## Cities of Aiti
+# Cities of Aiti
 
 The main continent of Aiti, called Sydän, is easily the largest. It is home to Canopy, the place where The Life called home. The continent is 
 dominated by four great Lands, roughly akin to city-states or kingdoms. Until recently, they lived in harmony, but tensions have been rising since the 
@@ -17,3 +17,16 @@ allow easy travel over water. The Land of the Sun has a fairly extensive network
 keen on personal gliders, though there is still a great deal of more mundane travel by horse or horse-drawn carriage, since gliders cannot handle the 
 hills and mountains of the region quite as well as legs. The Land of the Forest is difficult to traverse, and so there are many ad-hoc solutions
 strung together, mostly involving animals of some sort.
+
+## Between the cities
+
+Aiti is geographically diverse, covered mostly in ocean, but also boasts several continents.
+The Land only managed to make Sydän before they were taken down, but many more continents were
+brought to Aiti as she accepted the children of her brethren. Most of the other continents
+are fairly uniform, consisting mainly of a single city and the surrounding areas of other 
+planets. 
+
+On Sydän, however, there's a bit more variety. Broadly speaking, there's swamp and marshland 
+in the west, mountains in the east, grasslands in the south, and forest in the north. Only
+the areas around the major cities are what could be called densely populated, though there
+are denser pockets around some outlying villages. 
