--- a/stories/Tweaks/6-star-bow.stories.mdx
+++ b/stories/Tweaks/6-star-bow.stories.mdx
@@ -1,25 +1,26 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Tweaks|Magic Items/Moon Bow" />
+<Meta title="Tweaks|Magic Items/Star Bow" />
 
-## Moon Bow
+## Star Bow
 
-This item appears to be a wand with carvings of the moon. Some of the carvings are inlaid with
-dull opals. It feels heavier than it should, and appears to be made of an unfamiliar wood.
+This item appears to be a wand with carvings of the stars. Some of the stars
+are represented by various dull gems. It feels heavier than it should, and appears to be 
+made of an unfamiliar wood.
 
-Once attuned to the bow, the opals become luminescent, you gain proficiency with the Moon Bow,
+Once attuned to the bow, the gems become luminescent, you gain proficiency with the Star Bow,
 and you gain access to its abilities. As a bonus action, you may transform the wand into a magical
 longbow. The wand extends and bends into the shape of an intricately carved bow, and a string 
-of moonlight forms between the two ends. This bow does not require arrows. Arrows of moonlight 
+of stars forms between the two ends. This bow does not require arrows. Arrows of stars 
 will form when the bow is drawn.
 
-You gain a +2 bonus to Attack and Damage rolls with this weapon, which deals force damage instead of
-piercing damage. 
+You gain a +2 bonus to Attack and Damage rolls with this weapon, which deals magical piercing damage.
+Additionally, if the arrow successfully hits a target, it deals 1d4 magical piercing damage to all 
+enemies in a 10 foot radius from the target.
 
 The bow emits soft light in a 15-foot radius and dim light for an additional 15 feet. 
-The light is moonlight. While the bow persists, you can use an action to expand or reduce its radius 
-of bright and dim light by 5 feet each, to a maximum of 30 feet each or a minimum of 10 feet each. Friendly
-targets standing in either the bright or dim light have advantage on saves against any fear effects.
+ While the bow persists, you can use an action to expand or reduce its radius 
+of bright and dim light by 5 feet each, to a maximum of 30 feet each or a minimum of 10 feet each. 
 
 <table className='table'>
   <tbody>
@@ -34,11 +35,11 @@ targets standing in either the bright or dim light have advantage on saves again
     </tr>
     <tr>
       <th>Damage</th>
-      <td>1d8</td>
+      <td>1d8, plus 1d4 splash on hit</td>
     </tr>
     <tr>
       <th>Damage Type</th>
-      <td>Force</td>
+      <td>Magical piercing</td>
     </tr>
     <tr>
       <th>Rarity</th>
