updating moon weapons

--- a/stories/Tweaks/3-moon-bow.stories.mdx
+++ b/stories/Tweaks/3-moon-bow.stories.mdx
@@ -16,10 +16,10 @@ will form when the bow is drawn.
 You gain a +2 bonus to Attack and Damage rolls with this weapon, which deals force damage instead of
 piercing damage. 
 
-The bow emits soft light in a 15-foot radius and dim light for an additional 15 feet. 
-The light is moonlight. While the bow persists, you can use an action to expand or reduce its radius 
-of bright and dim light by 5 feet each, to a maximum of 30 feet each or a minimum of 10 feet each. Friendly
-targets standing in either the bright or dim light have advantage on saves against any fear effects.
+The bow emits soft light in a 60-foot radius. The light is moonlight. While the blade
+persists, you can use an action to brighten or dim the light. The light can become as bright as day, or
+low enough to require darkvision. Friendly targets standing in the aura have advantage on saves against
+any fear effects.
 
 <table className='table'>
   <tbody>
